[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tibbar"
version = "0.1.0"
description = "RISCV Instruction Stream Generator"
readme = "README.md"
license = "MIT"
dependencies = [
    "eumos",
    "jsonschema",
    "lome",
    "python-constraint",
    "pre-commit",
    "pykwalify",
    "PyYAML",
]
authors = [
    { name = "Stuart Alldred", email = "stuartalldred@gmail.com" }
]
requires-python = ">= 3.13"

[project.scripts]
tibbar = "tibbar.__main__:main"

[tool.uv.sources]
eumos = { git = "ssh://git@github.com/Alldred/eumos.git" }
lome = { git = "ssh://git@github.com/Alldred/lome.git" }

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.coverage.run]
source = ["tibbar", "sequences"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["tibbar*"]

[tool.setuptools.package-data]
tibbar = ["config/*.yaml", "config/*.json"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
